--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-05-26  Jakub Steiner <jimmac@gmail.com>
+
+	* edit-delete: replace a shredder with an eraser which is more
+		universally recognised. See bug #10073
+
 2009-02-26  Rodney Dawes  <dobey@gnome.org>
 
 	* configure.ac:
